# pitlane-mcp

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  SEMANTIC_SEARCH.md  TODO.md  pytest.ini
.github/workflows/: ci.yml  release.yml
bench/: setup.sh
bench/harness/: AGENTS.md  README.md  RESULTS.md  RIPGREP_BENCHMARK_2026-04-12.md  ROADMAP.md  TODO.md  aws_bench.sh  bench_kiro.py  bench_opencode.py  bench_runner.py  grade.py  manifest.py  prompts.fastapi.jsonl  prompts.leveldb.jsonl  prompts.ripgrep.jsonl  resume.py  run.py  sample.opencode.bedrock.no-mcp.json  sample.opencode.bedrock.with-mcp.json  sample.opencode.no-mcp.json  sample.opencode.with-mcp.json  schemas.py
bench/harness/configs/: bedrock.glm-flash.no-mcp.json  bedrock.glm-flash.with-mcp.json  bedrock.sonnet45.no-mcp.json  bedrock.sonnet45.with-mcp.json
bench/harness/framework/: __init__.py  agentic_loop.py  backends.py  benchmark_runner.py  claim_report.py  executors.py  mcp_executor.py  models.py  output_writer.py  prompt_loader.py  quality_scorer.py  token_tracker.py  tool_mix.py
bench/harness/prompts/: gin.jsonl  guava.jsonl  hono.jsonl  redis.jsonl
bench/harness/runtimes/: __init__.py  base.py  local_agentic.py  opencode.py
bench/harness/scorers/: __init__.py  base.py  default.py
bench/harness/suites/: ripgrep-core-v1.json
bench/harness/tests/: conftest.py  test_integration.py  test_properties.py  test_unit.py
benches/: indexing.rs  queries.rs
docs/: README.md  agent-guidance.md  benchmarks.md  languages.md  security.md  tools.md
docs/branding/: README.md
src/: cache.rs  error.rs  graph.rs  indexing.rs  lib.rs  main.rs  path_policy.rs  session.rs  stats.rs  sync_utils.rs  watcher.rs
src/embed/: client.rs  mod.rs  progress.rs  store.rs
src/index/: bm25.rs  format.rs  mod.rs  repo_profile.rs
src/indexer/: bash.rs  c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  language.rs  lua.rs  luau.rs  mod.rs  objc.rs  php.rs  python.rs  registry.rs  ruby.rs  rust.rs  solidity.rs  svelte.rs  swift.rs  typescript.rs  zig.rs
src/tools/: ensure_project_ready.rs  find_callees.rs  find_callers.rs  find_usages.rs  get_file_outline.rs  get_index_stats.rs  get_lines.rs  get_project_outline.rs  get_symbol.rs  get_usage_stats.rs  index_project.rs  investigate.rs  mod.rs  orchestrator.rs  search_content.rs  search_files.rs  search_symbols.rs  steering.rs  trace_execution_path.rs  wait_for_embeddings.rs  watch_project.rs
