[package]
name = "pitlane-mcp"
version = "0.2.0"
edition = "2021"

[lib]
name = "pitlane_mcp"
path = "src/lib.rs"

[[bin]]
name = "pitlane-mcp"
path = "src/main.rs"

[[bin]]
name = "memory_bench"
path = "src/bin/memory_bench.rs"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
notify = "8"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
blake3 = "1"
globset = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
