[package]
name = "pitlane-mcp"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "pitlane_mcp"
path = "src/lib.rs"

[[bin]]
name = "pitlane-mcp"
path = "src/main.rs"

[[bin]]
name = "memory_bench"
path = "src/bin/memory_bench.rs"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
notify = "8"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
blake3 = "1"
globset = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
