[package]
name = "pitlane-mcp"
version = "0.7.0"
edition = "2021"
description = "Token-efficient code intelligence MCP server — indexes a codebase with tree-sitter and lets AI agents fetch exactly the symbols they need"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eresende/pitlane-mcp"
readme = "README.md"
keywords = ["mcp", "tree-sitter", "ast", "code-intelligence", "ai"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["bench/", "CLAUDE.md", "TODO.md", ".kiro/"]

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides."x86_64-unknown-linux-gnu"]
pkg-url = "{ repo }/releases/download/v{ version }/pitlane-mcp-linux-x86_64.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides."aarch64-unknown-linux-gnu"]
pkg-url = "{ repo }/releases/download/v{ version }/pitlane-mcp-linux-aarch64.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides."x86_64-apple-darwin"]
pkg-url = "{ repo }/releases/download/v{ version }/pitlane-mcp-macos-x86_64.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides."aarch64-apple-darwin"]
pkg-url = "{ repo }/releases/download/v{ version }/pitlane-mcp-macos-aarch64.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides."x86_64-pc-windows-msvc"]
pkg-url = "{ repo }/releases/download/v{ version }/pitlane-mcp-windows-x86_64.zip"
pkg-fmt = "zip"

[lib]
name = "pitlane_mcp"
path = "src/lib.rs"

[[bin]]
name = "pitlane-mcp"
path = "src/main.rs"

[[bin]]
name = "pitlane"
path = "src/bin/pitlane.rs"

[[bin]]
name = "memory_bench"
path = "src/bin/memory_bench.rs"
required-features = ["memory-bench"]

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false

[features]
memory-bench = []

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
notify = "8"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
blake3 = "1"
globset = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tree-sitter-swift = "0.7.1"
tree-sitter-objc = "3.0.2"
tree-sitter-php = "0.24"
tree-sitter-zig = "1.1.2"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-luau = "1.2.0"
tantivy = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
httpmock = "0.7"
